fix spacings

--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -11,7 +11,8 @@
   @media only screen and (max-width: 992px) {
     height: auto;
     .main-col {
-      height: 100vh;
+      padding: 8rem 0;
+
       display: flex;
       align-items: center;
     }
@@ -53,11 +54,8 @@
   font-weight: 500;
   margin-bottom: var(--spacing-xl);
   color: var(--yellow-light);
-  font-size: var(--fz-md);
+  font-size: var(--fz-xs);
   width: 90%;
-  @media only screen and (max-width: 992px) {
-    width: 100%;
-  }
 }
 
 .col-photo {
