--- a/styles/theme/_variables.scss
+++ b/styles/theme/_variables.scss
@@ -1,5 +1,6 @@
 :root {
   --blue: #3102a8;
+  --blue-light: #4519b4;
   --blue-transparent: #3102a81a;
   --yellow: #f5e205;
   --yellow-light: #e2ecd0;
